# AgentBasedSimulation

./: 0_dt_bass_functions.R  1_dt_ecigarettes_descriptives.R  2_dt_ecigarettes_fitbass.R  3_dt_ecigarettes_spline.R  3_dt_example_predict_bass.R  COMBTheory.py  COMBTheoryMediator.py  Initiation_IMD.csv  Initiation_sex.csv  LICENSE  Level1Attribute.py  Level2Attribute.py  Person_SmokingModel_COMBTheory.py  Person_and_SmokingModel.py  QuitAttemptTheory.py  QuitSuccessTheory.py  QuitTheory.py  Quit_IMD.csv  Quit_age_sex.csv  README.md  RegSmokeTheory.py  SmokingTheoriesMediator.py  SocialNetwork.py  SocialNetworkQuitTheory.py  Software V0.1 for ABM of Smoking Behaviours.docx  checktype.py  create_test_data.R  create_test_data3.R  create_test_data_functions.R  find_category.py  generate_social_network.py  get_ecig_prevalence_from_csv_files.py  graph_k=2.gml  hse2012_stapm.R  hse2012_stapm.csv  initiation_relapse_quit_death_prob.py  initiation_relapse_quit_prob.py  logfile.txt  main.py  network.txt  (+18 more)
code_v0_1_tutorial/: Person_and_SmokingModel.py  QuitTheory.py  SmokingTheoriesMediator.py  hse2012_stapm.csv
config/: definitions.py  global_variables.py
core/: MacroEntity.py  MacroMediator.py  MicroAgent.py  Model.py  Regulator.py  Theory.py  TheoryMediator.py
data/: initiation_prob1month.csv  quit_prob1month_STPM.csv  relapse_prob1month_STPM.csv  testdata.csv  testdata_sts2010jan.csv
mbssm/: __init__.py  macro_entity.py  micro_agent.py  model.py  theory.py  theory_mediator.py
monthly diffusion models/: plot_bass_comparison_dt.R
output/: Exsmoker 1940.csv  Thumbs.db  (+20 more)
(+31 files in other folders)
